syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "pkg/api/gateway";

package gateway;

service Gateway {
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {
        option (google.api.http) = {
            post: "/api/v1/sign-up"
            body: "*"
        };
    }
    
    rpc SignIn (SignInRequest) returns (SignInResponse) {
        option (google.api.http) = {
            post: "/api/v1/sign-in"
            body: "*"
        };
    }

    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {
        option (google.api.http) = {
            post: "/api/v1/event"
            body: "*"
        };
    }

    rpc ReadEvent(ReadEventRequest) returns (ReadEventResponse) {
        option (google.api.http) = {
            get: "/api/v1/event/{event_id}"
        };
    }

    rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {
        option (google.api.http) = {
            put: "/api/v1/event/{event.event_id}"
            body: "event"
        };
    }

    rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse) {
        option (google.api.http) = {
            delete: "/api/v1/event/{event_id}"
        };
    }

    rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {
        option (google.api.http) = {
            get: "/api/v1/event/?creator={creator_id}&byInterests={by_interests}"
        };
    }

    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
        option (google.api.http) = {
            post: "/api/v1/event/register/{event_id}"
        };
    }

    rpc SetChatStatus(SetChatStatusRequest) returns (SetChatStatusResponse) {
        option (google.api.http) = {
            put: "/api/v1/event/chat"
            body: "*"
        };
    }

    rpc ListUsersToChat(ListUsersToChatRequest) returns (ListUsersToChatResponse) {
        option (google.api.http) = {
            get: "/api/v1/event/chat/{event_id}"
        };
    }

    rpc ListRegistratedEvents(ListRegistratedEventsRequest) returns (ListRegistratedEventsResponse) {
        option (google.api.http) = {
            get: "/api/v1/event/register"
        };
    }
}

message Event {
    int64 creator_id = 1;
    int64 event_id = 2;
    string title = 3;
    string description = 4;
    string time = 5;
    string place = 6;
    repeated string interests = 7;
}

message Participant {
    int64 user_id = 1;
    string name = 2;
    repeated string interests = 3;
}

message CreateEventRequest {
    Event event = 1;
}

message CreateEventResponse {
    int64 event_id = 1;
}

message ReadEventRequest { 
    int64 event_id = 1;
}

message ReadEventResponse {
    Event event = 1;
}

message UpdateEventRequest {
    Event event = 1;
}

message UpdateEventResponse {
}

message DeleteEventRequest {
    int64 event_id = 1;
}

message DeleteEventResponse {
}

message ListEventsRequest {
    int64 creator_id = 1;
    bool by_interests = 2;
}

message ListEventsResponse {
    repeated Event events = 1;
}

message RegisterUserRequest {
    int64 event_id = 1;
}

message RegisterUserResponse {
}

message SetChatStatusRequest {
    int64 event_id = 1;
    bool is_ready = 2;
}

message SetChatStatusResponse {
}

message ListUsersToChatRequest {
    int64 event_id = 1;
}

message ListUsersToChatResponse {
    repeated Participant participants = 1;
}

message ListRegistratedEventsRequest { 
}

message ListRegistratedEventsResponse {
    repeated Event events = 1;
}

message SignUpRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    repeated string interests = 5; 
}

message SignUpResponse {
}

message SignInRequest {
    string name = 1;
    string password = 2;
}

message SignInResponse {
    string access_token = 1;
    int64 access_token_ttl = 2;
    string refresh_token = 3;
    int64 refresh_token_ttl = 4;
}
